<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.lab05.nattapon58070036.simplemydot.fragment.EditDotFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/colorText"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:text="@string/color" />
        <Button
            android:id="@+id/btnChangeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_color" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/xTV"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:gravity="center"
            android:text="@string/x_axis" />
            <SeekBar
                android:id="@+id/xSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/yTV"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:gravity="center"
            android:text="@string/y_axis" />
        <SeekBar
            android:id="@+id/ySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/sizeTV"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:gravity="center"
            android:text="@string/size" />
        <SeekBar
            android:id="@+id/sizeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnOK"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
